WEBSITE-2852 - UI issue logging-in mobile entrypage on ios device.

--- a/assets/sass/base/_default.scss
+++ b/assets/sass/base/_default.scss
@@ -39,9 +39,10 @@ body {
     }
 }
 
-@supports (padding-top: constant(safe-area-inset-top)) {
+@supports (padding-top: env(safe-area-inset-top)) {
   body {
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    --safe-area-inset-top: env(safe-area-inset-top);
+    height: calc(100% + var(--safe-area-inset-top));
   }
 }
 
